Drag and Drop wenig verbessert und Refaktorisierung von ViewModel